--- a/src/components/style.html
+++ b/src/components/style.html
@@ -10,7 +10,7 @@
     <section class="header" :class="sliderHeader">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-xl-3 col-lg-4 col-md-4">
+                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-8">
                     <div class="header__logo d-flex">
                         <div class="header__logo-img">
                             <img src="./images/logos.png">
@@ -37,7 +37,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-2 col-md-4 text-center">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-4 text-center">
                     <div :class="{hideMenuBar: toggleHideMenu == true}" class="header__bar">
                         <i @click="toggleHideMenu = true" class="fas fa-bars"></i>
                     </div>
@@ -64,13 +64,13 @@
             </div>
 
             <div class="row justify-content-around text-center">
-                <div class="col-xl-2 col-lg-2 col-md-1">
+                <div class="col-xl-2 col-lg-2 col-md-1 col-sm-1 col-2">
                     <div class="header__arrow">
                         <i @click="prevImage" class="fas fa-chevron-left"></i>
                     </div>
                 </div>
 
-                <div class="col-xl-8 col-lg-8 col-md-10">
+                <div class="col-xl-8 col-lg-8 col-md-10 col-sm-10 col-8">
                     <div class="header__title">
                         <h4>Unique and Modern Design</h4>
                         <h3>Portfolio PSD Template</h3>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-2 col-lg-2 col-md-1">
+                <div class="col-xl-2 col-lg-2 col-md-1 col-sm-1 col-2">
                     <div class="header__arrow">
                         <i @click="nextImage" class="fas fa-chevron-right"></i>
                     </div>
@@ -106,7 +106,7 @@
     <section class="services">
         <div class="container">
             <div class="row text-center">
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-3 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-pen-square"></i>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-3 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-file-code"></i>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-3 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-cogs"></i>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-3 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-folder-open"></i>
