--- a/src/components/styleFiles/adaptation.scss
+++ b/src/components/styleFiles/adaptation.scss
@@ -39,8 +39,80 @@
     .header{
 
         &__circle ul{
+            padding-top: 120px;
+        }
+    }
+}
+
+@media only screen and(max-width: 769px){
+
+    // --- Header
+
+    .header{
+
+        &__circle ul{
+            padding-top: 60px;
+        }
+
+        &__title{
+
+            h4{
+                font-size: 28px;
+            }
+
+            h3{
+                font-size: 42px;
+            }
+        }
+    }
+}
+
+@media only screen and(max-width: 576px){
+
+    // --- Header
+
+    .header{
+
+        &__title{
 
             padding-top: 120px;
+
+            h4{
+                font-size: 18px;
+            }
+
+            h3{
+                font-size: 30px;
+            }
+        }
+
+        &__arrow{
+            font-size: 26px;
+            padding-top: 200px;
+        }
+    }
+}
+
+@media only screen and(max-width: 360px){
+
+    // --- Header
+
+    .header{
+
+        &__title{
+            padding-top: 80px;
+
+            h4{
+                font-size: 16px;
+            }
+
+            h3{
+                font-size: 28px;
+            }
+        }
+
+        &__circle{
+            display: none;
         }
     }
 }
