--- a/src/components/style.html
+++ b/src/components/style.html
@@ -833,5 +833,29 @@
             </div>
         </div>
     </section>
+
+    <!-- CopyRight -->
+    <section class="copyRight">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-5">
+                    <ul class="copyRight__left">
+                        <li>Copyright &copy;2015 <span>Waxom</span></li>
+                        <li><span>Privacy Policy</span></li>
+                        <li><span>FAQ</span></li>
+                        <li>Support</li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-4 text-right">
+                    <ul class="copyRight__right">
+                        <li>Designed by <span>ThemeFire</span></li>
+                        <li>Only on <span>Envato Market</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
