--- a/src/components/styleFiles/varb.scss
+++ b/src/components/styleFiles/varb.scss
@@ -18,4 +18,6 @@ $CalendarMonthBgHover: #a48d72;
 $footerBgColor: #191919;
 $footerReadMore: #d1d1d1;
 $colorTextSpan: #00bff3;
+$copyRightBg: #111111;
+$copyRightWaxom: #959595;
 
