--- a/src/components/styleFiles/style.scss
+++ b/src/components/styleFiles/style.scss
@@ -841,7 +841,7 @@
 // --- Footer ---
 
 .footer{
-    padding-top: 80px;
+    padding: 80px 0 30px 0;
     background: $footerBgColor;
 
     &__logo{
@@ -885,14 +885,14 @@
 
     &__block{
 
-        padding-top: 30px;
+        padding-top: 20px;
 
         h3{
             @include raleway(600);
 
             font-size: 24px;
             color: $colorWhite;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
     }
 
@@ -962,5 +962,92 @@
             width: 100%;
             height: 90px;
         }
+    }
+}
+
+// --- CopyRight
+
+.copyRight{
+
+    padding: 38px 0 20px 0;
+    background: $copyRightBg;
+
+    &__left{
+
+        padding: 0;
+
+        li{
+            @include montserrat(300);
+
+            font-size: 13px;
+            position: relative;
+            display: inline;
+            list-style-type: none;
+            color: $colorTextTitle;
+            margin-right: 16px;
+
+            ::after{
+                content: '';
+                display: block;
+                width: 1px;
+                height: 12px;
+                background: $CalendarMonthBg;
+                position: absolute;
+                top: 2px;
+                right: -10px;
+            }
+        }
+
+        :nth-child(1){
+
+            span{
+                color: $copyRightWaxom;
+            }
+        }
+
+        :nth-child(3){
+
+            span{
+                color: $colorHover;
+            }
+        }
+
+      
+    }
+
+    &__right{
+
+        padding: 0;
+
+        li{
+            @include montserrat(300);
+
+            position: relative;
+            font-size: 13px;
+            display: inline;
+            list-style-type: none;
+            color: $colorTextTitle;
+
+            span{
+                color: $copyRightWaxom;
+            }
+        }
+
+        :nth-child(1){
+            
+            margin-right: 10px;
+
+            ::after{
+                content: '';
+                display: block;
+                width: 1px;
+                height: 12px;
+                background: $CalendarMonthBg;
+                position: absolute;
+                top: 2px;
+                right: -1px;
+            }
+        }
+
     }
 }
