--- a/src/components/style.html
+++ b/src/components/style.html
@@ -106,7 +106,7 @@
     <section class="services">
         <div class="container">
             <div class="row text-center">
-                <div class="col-xl-3 col-md-3 col-sm-6 col-6">
+                <div class="col-xl-3 col-md-6 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-pen-square"></i>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-3 col-sm-6 col-6">
+                <div class="col-xl-3 col-md-6 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-file-code"></i>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-3 col-sm-6 col-6">
+                <div class="col-xl-3 col-md-6 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-cogs"></i>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-3 col-sm-6 col-6">
+                <div class="col-xl-3 col-md-6 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-folder-open"></i>
@@ -181,7 +181,7 @@
     <section class="realization">
         <div class="container">
             <div class="row justify-content-center text-center">
-                <div class="col-xl-8">
+                <div class="col-xl-8 col-md-10 col-sm-12 col-12">
                     <div class="realization__title">
                         <h3>Waxom is Realization of your ideas.</h3>
 
@@ -219,7 +219,7 @@
     <section class="boxes">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-xl-6">
+                <div class="col-xl-6 col-md-8">
                     <div class="boxes__text">
                         <h4><span>Waxom</span> Multipurpose WordPress Theme</h4>
                         <p>
@@ -227,7 +227,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xl-2">
+                <div class="col-xl-2 col-md-4 text-right">
                     <div class="boxes__btn">
                         <button>purchase now</button>
                     </div>
