--- a/src/components/styleFiles/style.scss
+++ b/src/components/styleFiles/style.scss
@@ -115,7 +115,7 @@
 
         ul{
 
-            padding: 170px 0 0;
+            padding: 150px 0 0;
 
             li{
                 color: $headerCircleColor;
@@ -274,6 +274,7 @@
     position: relative;
     padding: 80px 0 182px;
     background: $sectionBgColor;
+    overflow: hidden;
 
     &__title{
        
@@ -316,8 +317,8 @@
 
     &__img-center{
         position: absolute;
-        right: 0;
-        margin-right: 235px;
+        left: 50%;
+        margin-left: -320px;
         top: 32px;
         z-index: 1;
 
@@ -586,6 +587,7 @@
 
 .devices{
     padding-top: 80px;
+    overflow: hidden;
 
     &__text{
 
