--- a/src/components/style.html
+++ b/src/components/style.html
@@ -10,7 +10,7 @@
     <section class="header" :class="sliderHeader">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-8">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-8">
                     <div class="header__logo d-flex">
                         <div class="header__logo-img">
                             <img src="./images/logos.png">
@@ -102,11 +102,10 @@
     </section>
 
     <!-- Services -->
-
     <section class="services">
         <div class="container">
             <div class="row text-center">
-                <div class="col-xl-3 col-md-6 col-sm-6 col-6">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-pen-square"></i>
@@ -123,7 +122,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-6 col-sm-6 col-6">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-file-code"></i>
@@ -140,7 +139,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-6 col-sm-6 col-6">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-cogs"></i>
@@ -157,7 +156,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-6 col-sm-6 col-6">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6">
                     <div class="services__block">
                         <div class="services__item">
                             <i class="fas fa-folder-open"></i>
@@ -181,7 +180,7 @@
     <section class="realization">
         <div class="container">
             <div class="row justify-content-center text-center">
-                <div class="col-xl-8 col-md-10 col-sm-12 col-12">
+                <div class="col-xl-8 col-lg-10 col-md-10 col-sm-12 col-12">
                     <div class="realization__title">
                         <h3>Waxom is Realization of your ideas.</h3>
 
@@ -219,7 +218,7 @@
     <section class="boxes">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-xl-6 col-md-8">
+                <div class="col-xl-6 col-lg-8 col-md-8 col-sm-12">
                     <div class="boxes__text">
                         <h4><span>Waxom</span> Multipurpose WordPress Theme</h4>
                         <p>
@@ -227,7 +226,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xl-2 col-md-4 text-right">
+                <div class="col-xl-2 col-lg-4 col-md-4 col-sm-12 text-right">
                     <div class="boxes__btn">
                         <button>purchase now</button>
                     </div>
@@ -240,7 +239,7 @@
     <section class="projects">
         <div class="container">
             <div class="row justify-content-center text-center">
-               <div class="col-xl-8">
+               <div class="col-xl-8 col-lg-8 col-md-10 col-sm-12 col-12">
                    <div class="projects__title">
                        <h3>Our Latest Projects.</h3>
 
@@ -253,7 +252,7 @@
             </div>
 
             <div class="row justify-content-center text-center">
-                <div class="col-xl-6">
+                <div class="col-xl-6 col-lg-8 col-md-10 col-sm-12 col-12">
                     <div class="projects__chooseClass">
                         <button :class="{buttonFocus: activeBlock == 1}" @click="activeBlockFn(1)">All</button>
                         <button :class="{buttonFocus: activeBlock == 2}" @click="activeBlockFn(2)">Web Design</button>
@@ -265,7 +264,7 @@
             </div>
 
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="projects__item" :class="[{operatingBlock: activeBlock == 1}, {operatingBlock: activeBlock == 2}]">
                         <div class="projects__img">
                                 <div class="projects__link">
@@ -283,7 +282,7 @@
                      </div>
                 </div>
 
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="projects__item" :class="[{operatingBlock: activeBlock == 1}, {operatingBlock: activeBlock == 2}]">
                         <div class="projects__img">
                             <div class="projects__link">
@@ -301,7 +300,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="projects__item" :class="[{operatingBlock: activeBlock == 1}, {operatingBlock: activeBlock == 2},  {operatingBlock: activeBlock == 5}]">
                         <div class="projects__img">
                             <div class="projects__link">
@@ -321,7 +320,7 @@
             
 
            
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="projects__item" :class="[{operatingBlock: activeBlock == 1}, {operatingBlock: activeBlock == 3}]">
                         <div class="projects__img">
                             <div class="projects__link">
@@ -339,7 +338,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="projects__item" :class="[{operatingBlock: activeBlock == 1}, {operatingBlock: activeBlock == 3}, {operatingBlock: activeBlock == 5}]">
                         <div class="projects__img">
                             <div class="projects__link">
@@ -357,7 +356,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-6">
                     <div class="projects__item" :class="[{operatingBlock: activeBlock == 1}, {operatingBlock: activeBlock == 3}]">
                         <div class="projects__img">
                             <div class="projects__link">
@@ -376,7 +375,7 @@
                 </div>
             
                 <template v-if="loadMore == true">
-                    <div class="col-xl-4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-6">
                         <div class="projects__item" :class="[{operatingBlock: activeBlock == 1}, {operatingBlock: activeBlock == 4}, {operatingBlock: activeBlock == 5}]">
                             <div class="projects__img">
                                 <div class="projects__link">
@@ -394,7 +393,7 @@
                         </div>
                     </div>
     
-                    <div class="col-xl-4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-6">
                         <div class="projects__item" :class="[{operatingBlock: activeBlock == 1}, {operatingBlock: activeBlock == 4}]">
                             <div class="projects__img">
                                 <div class="projects__link">
@@ -412,7 +411,7 @@
                         </div>
                     </div>
     
-                    <div class="col-xl-4">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-6">
                         <div class="projects__item" :class="[{operatingBlock: activeBlock == 1}, {operatingBlock: activeBlock == 4}]">
                             <div class="projects__img">
                                 <div class="projects__link">
