--- a/src/components/style.html
+++ b/src/components/style.html
@@ -447,7 +447,7 @@
     <section class="presentation">
         <div class="container">
             <div class="row justify-content-center text-center">
-                <div class="col-xl-6">
+                <div class="col-xl-6 col-lg-8 col-md-10 col-sm-12 col-12">
                     <div class="presentation__play">
                         <i class="far fa-play-circle"></i>
                     </div>
@@ -469,13 +469,8 @@
     <!-- Devices -->
     <section class="devices">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-5 text-center">
-                    <div class="devices__img">
-                        <img src="./images/devices/iPhone in hand.png">
-                    </div>
-                </div>
-                <div class="col-xl-7">
+            <div class="row justify-content-end">
+                <div class="col-xl-7 col-lg-8 col-md-12 col-sm-12 col-12">
                     <div class="devices__text">
                         <h4>Excellent for Mobile Devices.</h4>
 
@@ -493,6 +488,10 @@
                             <li><i class="fas fa-chevron-circle-right"></i>Investigationes demonstraverunt lectores;</li>
                         </ul>
                     </div>
+                </div>
+
+                <div class="devices__img">
+                    <img src="./images/devices/iPhone in hand.png">
                 </div>
             </div>
         </div>
